--- a/index.html
+++ b/index.html
@@ -2,9 +2,193 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="origin-when-cross-origin" name="referrer"/>
+    <meta name="viewport" content="width=device-width">
+
     <title>MaiJZ</title>
+
+    <link rel="fluid-icon" href="html/img/fluidicon.jpg" title="MaiJZ">
+    <link rel="icon" type="image/x-icon" href="html/img/favicon.ico">
+
+    <link rel="stylesheet" href="html/css/base.css">
+    <link rel="stylesheet" href="html/css/github-frameworks.css">
+    <link rel="stylesheet" href="html/css/index.css">
+    <link rel="stylesheet" href="html/css/header.css">
+    <link rel="stylesheet" href="html/css/pinned-repo-item.css">
+
+
+    <script src="html/js/vue.min.js"></script>
+    <script src="html/js/index.js"></script>
 </head>
 <body>
-Hello World!
+
+<div class="position-relative ">
+    <div class="header" role="banner">
+        <div class="container clearfix">
+            <a class="header-logo-invertocat" href="http://github.com/" data-hotkey="g d" aria-label="Homepage"
+               data-ga-click="Header, go to dashboard, icon:logo">
+                <svg aria-hidden="true" class="octicon octicon-mark-github" height="32" version="1.1"
+                     viewBox="0 0 16 16" width="32">
+                    <path fill-rule="evenodd"
+                          d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
+                </svg>
+            </a>
+
+
+            <!--<ul class="header-nav float-left" role="navigation">-->
+                <!--<li class="header-nav-item">-->
+                    <!--<a href="/pulls" aria-label="Pull requests you created"-->
+                       <!--class=" header-nav-link"-->
+                       <!--data-ga-click="Header, click, Nav menu - item:pulls context:user" data-hotkey="g p"-->
+                       <!--data-selected-links="/pulls /pulls/assigned /pulls/mentioned /pulls">-->
+                        <!--Pull requests-->
+                    <!--</a></li>-->
+            <!--</ul>-->
+
+        </div>
+    </div>
+</div>
+<div role="main">
+    <div class="container-lg clearfix px-3 mt-4">
+        <div class="h-card col-3 float-left pr-3">
+            <div id="user">
+                <a v-bind:href="json.html_url" class="u-photo d-block ">
+                    <img class="avatar width-full rounded-2" height="230"
+                         v-bind:src="json.avatar_url" width="230"></a>
+
+                <div class="vcard-names-container py-3 "
+                     style="position: static;">
+                    <h1 class="vcard-names">
+                        <span class="p-name vcard-fullname d-block">{{json.name}}</span>
+                        <span class="p-nickname vcard-username d-block">{{json.login}}</span>
+                    </h1>
+                </div>
+
+                <div class="p-note user-profile-bio">
+                    <div>{{ json.bio }}</div>
+                </div>
+
+
+                <ul class="vcard-details border-top border-gray-light py-3">
+
+                    <li aria-label="Organization" class="vcard-detail pt-1 css-truncate css-truncate-target"
+                        itemprop="worksFor" show_title="false"
+                        v-show="json.company">
+                        <svg aria-hidden="true" class="octicon octicon-organization" height="16" version="1.1"
+                             viewBox="0 0 16 16" width="16">
+                            <path fill-rule="evenodd"
+                                  d="M16 12.999c0 .439-.45 1-1 1H7.995c-.539 0-.994-.447-.995-.999H1c-.54 0-1-.561-1-1 0-2.634 3-4 3-4s.229-.409 0-1c-.841-.621-1.058-.59-1-3 .058-2.419 1.367-3 2.5-3s2.442.58 2.5 3c.058 2.41-.159 2.379-1 3-.229.59 0 1 0 1s1.549.711 2.42 2.088C9.196 9.369 10 8.999 10 8.999s.229-.409 0-1c-.841-.62-1.058-.59-1-3 .058-2.419 1.367-3 2.5-3s2.437.581 2.495 3c.059 2.41-.158 2.38-1 3-.229.59 0 1 0 1s3.005 1.366 3.005 4"></path>
+                        </svg>
+                        <span class="p-org"><div>{{ json.company }}</div></span>
+                    </li>
+
+                    <li aria-label="Home location" class="vcard-detail pt-1 css-truncate css-truncate-target"
+                        v-show="json.location">
+                        <svg aria-hidden="true" class="octicon octicon-location" height="16" version="1.1"
+                             viewBox="0 0 12 16" width="12">
+                            <path fill-rule="evenodd"
+                                  d="M6 0C2.69 0 0 2.5 0 5.5 0 10.02 6 16 6 16s6-5.98 6-10.5C12 2.5 9.31 0 6 0zm0 14.55C4.14 12.52 1 8.44 1 5.5 1 3.02 3.25 1 6 1c1.34 0 2.61.48 3.56 1.36.92.86 1.44 1.97 1.44 3.14 0 2.94-3.14 7.02-5 9.05zM8 5.5c0 1.11-.89 2-2 2-1.11 0-2-.89-2-2 0-1.11.89-2 2-2 1.11 0 2 .89 2 2z"></path>
+                        </svg>
+                        <span class="p-label">{{ json.location }}</span>
+                    </li>
+
+                    <li aria-label="Email" class="vcard-detail pt-1 css-truncate css-truncate-target" itemprop="email"
+                        v-show="json.email">
+                        <svg aria-hidden="true" class="octicon octicon-mail" height="16" version="1.1"
+                             viewBox="0 0 14 16" width="14">
+                            <path fill-rule="evenodd"
+                                  d="M0 4v8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1H1c-.55 0-1 .45-1 1zm13 0L7 9 1 4h12zM1 5.5l4 3-4 3v-6zM2 12l3.5-3L7 10.5 8.5 9l3.5 3H2zm11-.5l-4-3 4-3v6z"></path>
+                        </svg>
+                        <a class="u-email" v-bind:href="'mailto:' + json.email">{{ json.email }}</a>
+                    </li>
+
+                    <li aria-label="Blog or website" class="vcard-detail pt-1 css-truncate css-truncate-target"
+                        itemprop="url"
+                        v-show="json.blog">
+                        <svg aria-hidden="true" class="octicon octicon-link" height="16" version="1.1"
+                             viewBox="0 0 16 16" width="16">
+                            <path fill-rule="evenodd"
+                                  d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
+                        </svg>
+                        <a v-bind:href="json.blog" class="u-url" rel="nofollow me">{{ json.blog }}</a>
+                    </li>
+                </ul>
+
+
+                <div class="border-top py-3 clearfix"
+                     v-show="isShowOrganizations">
+                    <h2 class="mb-1 h4">Organizations</h2>
+
+                    <a href="/MakomoProject" aria-label="MakomoProject"
+                       class="tooltipped tooltipped-n avatar-group-item">
+                        <img alt="@MakomoProject" class="avatar" height="35"
+                             src="https://avatars3.githubusercontent.com/u/23189528?v=3&amp;s=70"
+                             width="35"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-9 float-left pl-2">
+
+
+            <div id="projects">
+
+                <div v-for="pro in projects">
+                    <h2 class="f4 mb-2 text-normal">{{ pro.title }}</h2>
+                    <ol class="pinned-repos-list">
+
+                        <li class="pinned-repo-item" v-for="repo in getRepos(pro.repos)">
+                            <div class="pinned-repo-item-content">
+                                <span class="d-block position-relative">
+                                    <span class="pinned-repository-handle float-left pr-2"
+                                          title="HomePage">
+                                        <a class="home" v-show="repo.homepage" v-bind:href="repo.homepage"></a>
+                                    </span>
+                                    <a v-bind:href="repo.html_url" class="text-bold">
+                                        <span class="repo " v-bind:title="repo.name">{{ repo.name}}</span>
+                                    </a>
+                                </span>
+
+                                <p class="pinned-repo-desc text-gray text-small d-block mt-2 mb-3">
+                                    {{ repo.description }}</p>
+
+                                <p class="mb-0 f6 text-gray">
+                                    <span class="repo-language-color pinned-repo-meta"
+                                          v-bind:style="getLanguageColor(repo)"
+                                    v-show="repo.language"></span>
+                                    {{ repo.language }}
+
+                                    <a v-bind:href="repo.html_url + '/stargazers'" class="pinned-repo-meta muted-link"
+                                    v-show="repo.stargazers_count > 0">
+                                        <svg aria-label="stars" class="octicon octicon-star" height="16" role="img"
+                                             version="1.1" viewBox="0 0 14 16" width="14">
+                                            <path fill-rule="evenodd"
+                                                  d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74z"></path>
+                                        </svg>
+                                        {{ repo.stargazers_count }}
+                                    </a>
+
+                                    <a v-bind:href="repo.html_url + '/network/members'" class="pinned-repo-meta muted-link"
+                                    v-show="repo.forks_count > 0">
+                                        <svg aria-label="fork" class="octicon octicon-repo-forked" height="16"
+                                             role="img"
+                                             version="1.1" viewBox="0 0 10 16" width="10">
+                                            <path fill-rule="evenodd"
+                                                  d="M8 1a1.993 1.993 0 0 0-1 3.72V6L5 8 3 6V4.72A1.993 1.993 0 0 0 2 1a1.993 1.993 0 0 0-1 3.72V6.5l3 3v1.78A1.993 1.993 0 0 0 5 15a1.993 1.993 0 0 0 1-3.72V9.5l3-3V4.72A1.993 1.993 0 0 0 8 1zM2 4.2C1.34 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3 10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm3-10c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z"></path>
+                                        </svg>
+                                        {{ repo.forks_count }}
+                                    </a>
+                                </p>
+                            </div>
+                        </li>
+
+                    </ol>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
