修改 使用频率 颜色块

--- a/index.html
+++ b/index.html
@@ -142,23 +142,23 @@
                     <tbody>
                     <tr>
                         <td>JavaScript</td>
-                        <td class="use-rate-3"></td>
+                        <td><div class="use-rate-3"></div></td>
                     </tr>
                     <tr>
                         <td>Python</td>
-                        <td class="use-rate-2"></td>
+                        <td><div class="use-rate-2"></div></td>
                     </tr>
                     <tr>
                         <td>C#</td>
-                        <td class="use-rate-2"></td>
+                        <td><div class="use-rate-2"></div></td>
                     </tr>
                     <tr>
                         <td>Java</td>
-                        <td class="use-rate-1"></td>
+                        <td><div class="use-rate-1"></div></td>
                     </tr>
                     <tr>
                         <td>C</td>
-                        <td class="use-rate-0"></td>
+                        <td><div class="use-rate-0"></div></td>
                     </tr>
                     </tbody>
                 </table>
