设置 profile标签页 为激活

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <ul class="header-nav float-right st-nav-tabs" role="navigation">
                 <li class="header-nav-item">
                     <a class="header-nav-link st-nav-tab" href="javascript:void(0);"
-                       st-target="pane-profile">Profile</a>
+                       st-target="pane-profile" st-active="true">Profile</a>
                 </li>
                 <li class="header-nav-item">
                     <a class="header-nav-link st-nav-tab" href="javascript:void(0);"
-                       st-target="pane-books" st-active="true">Books</a>
+                       st-target="pane-books">Books</a>
                 </li>
                 <li class="header-nav-item">
                     <a class="header-nav-link st-nav-tab" href="javascript:void(0);"
