修复 header.html 链接问题

--- a/pages/header/index.html
+++ b/pages/header/index.html
@@ -14,21 +14,21 @@
 <body class="header-body">
 <div id="header" class="header" role="banner">
     <div class="container clearfix">
-        <a aria-label="GitHub" class="header-logo-invertocat"
+        <a aria-label="GitHub" class="header-logo-invertocat" target="_top"
            v-bind:href="'https://github.com/' + LINKS.GitHub">
             <svg aria-hidden="true" class="octicon" height="32" version="1.1"
                  viewBox="0 0 16 16" width="32">
                 <use xlink:href="#svg-github"/>
             </svg>
         </a>
-        <a aria-label="Twitter" class="header-logo-invertocat"
+        <a aria-label="Twitter" class="header-logo-invertocat" target="_top"
            v-bind:href="'https://twitter.com/' + LINKS.Twitter">
             <svg aria-hidden="true" class="octicon" height="32" version="1.1"
                  viewBox="0 0 16 16" width="32">
                 <use xlink:href="#svg-twitter"/>
             </svg>
         </a>
-        <a aria-label="Email" class="header-logo-invertocat"
+        <a aria-label="Email" class="header-logo-invertocat" target="_top"
            v-bind:href="'mailto:' + LINKS.Email">
             <svg aria-hidden="true" class="octicon" height="32" version="1.1"
                  viewBox="0 0 16 16" width="32">
